# tiny-diffusion

./: model.py  preprocess_text.py  pyproject.toml  sample.py  training_with_tokenizer.py
animations/: diffusion-process.py  game-of-life.py
data/: UIT-VSMEC-sentences.txt
