[project]
name = "tiny-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.3.0",
    "huggingface>=0.0.1",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
